src/objects/Items_Purchased__c.object
<CustomObject>
    <description>Items purchased that were added to the inventory</description>
    <fields>
        <fullName>Item__c</fullName>
        <label>Item</label>
        <referenceTo>Item__c</referenceTo>
        <relationshipName>Purchases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Items Purchased</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Purchase Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Items Purchased</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>